# shroom_shrooms

./: .gitignore  .taplo.toml  Cargo.toml  flake.nix  justfile
crates/ai/src/: combat.rs  environment.rs  lib.rs  organisms.rs  rival.rs
crates/core/src/: components.rs  config.rs  constants.rs  lib.rs  messages.rs  region.rs  simulation.rs  tile.rs  unlock.rs
crates/fruiting/src/: effects.rs  fruiting.rs  lib.rs  spores.rs
crates/growth/src/: bias_decay.rs  density_flow.rs  dieback.rs  lib.rs  melanin.rs  moisture.rs  nutrient.rs  symbiosis.rs  tip.rs
crates/growth/tests/: dry_zone_dieback.rs  paint_then_grow.rs
crates/input/: Cargo.toml
crates/input/src/: action.rs  camera.rs  cursor.rs  lib.rs  pointer.rs  priority.rs  selection.rs  specialization_input.rs  wisp.rs
crates/input/tests/: wisp_mode_gate.rs
crates/regions/src/: discovery.rs  fragment.rs  lib.rs  mutation.rs  slot_machine.rs  specialization.rs
crates/regions/tests/: decompose_to_fragment.rs  slot_machine_unique_decomp.rs
crates/render/src/: assets.rs  atmosphere.rs  data_layer.rs  entity_render.rs  lib.rs  network_render.rs  terrain_render.rs  units_render.rs
crates/shroom_ai/: Cargo.toml
crates/shroom_ai/src/: combat.rs  environment.rs  lib.rs  organisms.rs  rival.rs
crates/shroom_core/src/: lib.rs
crates/shroom_fruiting/: Cargo.toml
crates/shroom_fruiting/src/: effects.rs  fruiting.rs  lib.rs  spores.rs
crates/shroom_growth/: Cargo.toml
crates/shroom_growth/src/: decay.rs  lib.rs  nutrient.rs  tip.rs
crates/shroom_input/src/: camera.rs  lib.rs  priority.rs  selection.rs  specialization_input.rs  speed.rs
crates/shroom_regions/: Cargo.toml
crates/shroom_regions/src/: discovery.rs  fragment.rs  lib.rs  mutation.rs  slot_machine.rs  specialization.rs
crates/shroom_render/src/: data_layer.rs  entity_render.rs  lib.rs  network_render.rs  terrain_render.rs
crates/shroom_shrooms/src/: main.rs
crates/shroom_ui/: Cargo.toml
crates/shroom_ui/src/: ability_bar.rs  game_screens.rs  hud.rs  lib.rs  slot_machine_ui.rs  spec_picker.rs
crates/shroom_world/: Cargo.toml
crates/shroom_world/src/: lib.rs  region_tracking.rs  terrain_gen.rs
crates/ui/: Cargo.toml
crates/ui/src/: ability_bar.rs  game_screens.rs  hud.rs  lib.rs  slot_machine_ui.rs  tile_popover.rs
crates/units/: Cargo.toml
crates/units/src/: hive.rs  lib.rs  movement.rs  production.rs
crates/units/tests/: civ_loop.rs
crates/world/src/: lib.rs  region_tracking.rs  terrain_gen.rs
docs/adr/: 0001-density-flow-over-tip-agents.md  0002-networks-merge-on-contiguity.md
docs/plans/: 2026-05-04-slim-core-and-tick-gate-render.md  2026-05-05-bevy-ecs-tilemap-integration.md  2026-05-05-map-seed.md  2026-05-07-debug-tooling.md  2026-05-07-density-flow-refactor.md  2026-05-07-zoom-and-frame-perf.md  2026-05-18-civ-rework-phase1.md  2026-05-18-configurable-map-size.md
docs/specs/: 2026-05-07-kingdom-density-flow-design.md  2026-05-18-civ-rework-phase1-design.md  2026-05-18-configurable-map-size-design.md
