cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/*", "bin"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
publish = false

[workspace.dependencies]
bevy = "0.18"
rand = "0.10"
hexx = { version = "0.24", features = ["bevy"] }
leafwing-input-manager = "0.20"
image = "0.25"
bevy_ecs_tilemap = "0.18.1"
pathfinding = "4"

kingdom_core = { path = "crates/core" }
kingdom_world = { path = "crates/world" }
kingdom_growth = { path = "crates/growth" }
kingdom_regions = { path = "crates/regions" }
kingdom_render = { path = "crates/render" }
kingdom_input = { path = "crates/input" }
kingdom_ai = { path = "crates/ai" }
kingdom_fruiting = { path = "crates/fruiting" }
kingdom_ui = { path = "crates/ui" }
kingdom_units = { path = "crates/units" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
