[package]
name = "kingdom_input"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
bevy = { workspace = true }
hexx = { workspace = true }
kingdom_core = { workspace = true }
kingdom_units = { workspace = true }
leafwing-input-manager = { workspace = true }
