[package]
name = "kingdom_ui"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
bevy = { workspace = true }
kingdom_core = { workspace = true }
kingdom_fruiting = { workspace = true }
kingdom_input = { workspace = true }
kingdom_regions = { workspace = true }
kingdom_units = { workspace = true }
